--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+accelerate==1.7.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
+asttokens==3.0.0
 async-timeout==5.0.1
 attrs==25.3.0
+babel==2.17.0
+bark==0.1.5
+boto3==1.38.23
+botocore==1.38.23
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -10,16 +16,26 @@ click==8.1.8
 colorama==0.4.6
 comtypes==1.4.11
 datasets==3.6.0
+decorator==5.2.1
 dill==0.3.8
+einops==0.8.1
+encodec==0.1.1
+exceptiongroup==1.3.0
+executing==2.2.0
 filelock==3.18.0
 frozenlist==1.6.0
 fsspec==2025.3.0
+funcy==2.0
 huggingface-hub==0.32.0
 idna==3.10
+ipython==8.18.1
+jedi==0.19.2
 Jinja2==3.1.6
+jmespath==1.0.1
 joblib==1.5.1
 llvmlite==0.43.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 more-itertools==10.7.0
 mpmath==1.3.0
 multidict==6.4.4
@@ -32,11 +48,16 @@ nvidia-ml-py==12.575.51
 openai-whisper==20240930
 packaging==25.0
 pandas==2.2.3
+parso==0.8.4
 pillow==11.0.0
+prompt_toolkit==3.0.51
 propcache==0.3.1
+psutil==7.0.0
+pure_eval==0.2.3
 pyarrow==20.0.0
 PyAudio==0.2.14
 pycparser==2.22
+Pygments==2.19.1
 pynvml==12.0.0
 pypiwin32==223
 python-dateutil==2.9.0.post0
@@ -46,22 +67,27 @@ pywin32==310
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+s3transfer==0.13.0
 safetensors==0.5.3
 scipy==1.13.1
 sentencepiece==0.2.0
 six==1.17.0
 sounddevice==0.5.2
 soundfile==0.13.1
+stack-data==0.6.3
 sympy==1.14.0
 tiktoken==0.9.0
+tkcalendar==1.6.1
 tokenizers==0.21.1
 torch==2.7.0+cu128
 torchaudio==2.7.0+cu128
 torchvision==0.22.0+cu128
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.52.3
 typing_extensions==4.13.2
 tzdata==2025.2
-urllib3==2.4.0
+urllib3==1.26.20
+wcwidth==0.2.13
 xxhash==3.5.0
 yarl==1.20.0
