--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN_HERE"
 TELEGRAM_ADMIN_CHAT_ID="YOUR_TELEGRAM_ADMIN_CHAT_ID_HERE"
+ENABLE_WEB_UI="True" # Set to "False" to disable the web UI
+WEB_UI_PORT="8080"
+# Set to "True" if Pydub and FFmpeg/Libav are available for server-side audio conversion for web inputs
+PYDUB_AVAILABLE_FOR_WEB_CONVERSION="True"
